# BuildNet3D-dataset

./: README.md  pyproject.toml
buildnet3d_dataset/: README.md  annotation.py  blender_utils.py  cameramanager.py  iou.py  material.py  material_factory.py  post_process_segmentation.py  renderer.py  shp2obj.py
buildnet3d_dataset/blender_scripts/: dataset.py
buildnet3d_dataset/buildings/: L_building.py  composed_building.py  skyscraper.py  volume.py
buildnet3d_dataset/cli/: blender_library_install.py  pointcloud_visualization.py  transforms_json_visualization.py
buildnet3d_dataset/compositor_trees/: depth_tree.py  mask_node_tree.py  norm_tree.py  tree.py
buildnet3d_dataset/config/: dataset_config.json  segmentation_config.json
buildnet3d_dataset/config/building_configs/: LBuilding_1.json  Skyscraper_1.json
buildnet3d_dataset/light_manager/: sun_light.py  uniform_light.py
buildnet3d_dataset/mesh_tools/: mesh_utils.py  segmented_3D_model.py
buildnet3d_dataset/modules_manager/: module.py  parametric_window.py  roof.py  window.py
docker/: Dockerfile  blender_python_library_install.py  requirements.txt
tests/data/building_generation/: ReadMe.md  mock_model_cubes.blend  mock_model_cubes.ply  mock_model_cubes_mesh_info_truth.csv  mock_model_cubes_mesh_normal_info_truth.csv  mock_model_house.blend  mock_model_house.ply  mock_segmentation_mapping.json  vertex_test.csv  vertex_truth.csv
tests/tests_building_generator/: test_L_building.py  test_blender_utils.py  test_composed_building.py  test_composed_building_generation.py  test_compositor_trees.py  test_dataset.py  test_mesh_tools.py  test_parametric_window.py  test_segmented_3D_model.py  test_skyscraper.py  tests_segmentation.py
tests/tests_building_generator/test_helpers/: test_composed_building.py  test_tree.py  test_utils.py
